[tool.poetry]
name = "calc-android"
version = "0.1.0"
description = ""
authors = ["Alex <santes.au@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kivy = "^2.3.0"
buildozer = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

